WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304170
Cache API is broken in nested workers
https://bugs.webkit.org/show_bug.cgi?id=304170
Summary
Cache API is broken in nested workers
youenn fablet
Reported
2025-12-15 02:08:52 PST
Cache API is broken in nested workers
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-15 02:09:04 PST
<
rdar://problem/166525017
>
youenn fablet
Comment 2
2025-12-15 02:28:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55400
youenn fablet
Comment 3
2025-12-15 02:29:07 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/56737
EWS
Comment 4
2025-12-16 00:00:02 PST
Committed
304500@main
(944251868a31): <
https://commits.webkit.org/304500@main
> Reviewed commits have been landed. Closing PR #55400 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug