Cache API is broken in nested workers rdar://166525017 https://bugs.webkit.org/show_bug.cgi?id=304170

Reviewed by Alex Christensen.

In case of nested workers, we get the connection from the loading document.
This aligns WebKit with other browsers.
Covered by added WPT test.

Canonical link: https://commits.webkit.org/304500@main