Source/WebCore/workers/WorkerMessagingProxy.cpp
@@ -35,6 +35,7 @@
 #include "ContextDestructionObserverInlines.h"
 #include "DedicatedWorkerGlobalScope.h"
 #include "DedicatedWorkerThread.h"
+#include "Document.h"
 #include "ErrorEvent.h"
 #include "EventNames.h"
 #include "FetchRequestCredentials.h"
@@ -311,6 +312,9 @@ RefPtr<CacheStorageConnection> WorkerMessagingProxy::createCacheStorageConnectio
         return nullptr;
 
     RefPtr document = dynamicDowncast<Document>(*m_scriptExecutionContext);
+    if (!document)
+        document = Document::allDocumentsMap().get(m_loaderContextIdentifier);
+
     ASSERT(document);
     if (!document || !document->page())
         return nullptr;
@@ -321,6 +325,9 @@ RefPtr<RTCDataChannelRemoteHandlerConnection> WorkerMessagingProxy::createRTCDat
 {
     ASSERT(isMainThread());
     RefPtr document = dynamicDowncast<Document>(*m_scriptExecutionContext);
+    if (!document)
+        document = Document::allDocumentsMap().get(m_loaderContextIdentifier);
+
     ASSERT(document);
     if (!document || !document->page())
         return nullptr;
